--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
       <div id="navigation">
         <h1><a href="#top">verbose.js</a></h1>
         <ul>
-          <li><a href="#top" class="nav item01">Home</a></li>
           <li><a href="#description" class="nav item02">What is verbose.js</a></li>
           <li><a href="#code" class="nav item03">Code Examples</a></li>
           <li><a href="#get" class="nav item04">Get verbose.js</a></li>
@@ -54,7 +53,7 @@
       </p>
       <h3><a name="get">Get verbose.js</a></h3>
       <p>
-        verbose.js is jus a very simple function. However there might still be place for imrpovements. You can check out the sample-code on <a href="https://github.com/zeidlos/verbose.js">Github</a>.
+        verbose.js is jus a very simple function. However there might still be place for imrpovements. You can check out the code on <a href="https://github.com/zeidlos/verbose.js">Github</a>.
       </p>
     </div>
     <div id="footer">
